Updated Simplified Chinese locale courtesy of @alone on Discord

--- a/locale/zh-CN/pyhightech.cfg
+++ b/locale/zh-CN/pyhightech.cfg
@@ -1,177 +1,168 @@
-﻿#汉化：aotix，基于咸鱼拓展而来。
-
-[mod-name]
-pyhightech=Py之高新科技
-pyhightechgraphics=Py之高新科技贴图包
-
-[mod-description]
-pyhightech=改善和提高游戏中的电子产品难度。
-pyhightechgraphics=包含Py之高新科技贴图。
-
+﻿##汉化生成来自异星工厂Mod管理器，软件更新QQ群：1153638761 164571529
 [recipe-name]
 urea-decomposition=尿素分解
-fluidize-coke=焦炭流态化
-tall-oil-separation=高油分离
-phosphoric-acid=亚磷酸蒸馏
-light-n=轻掺杂N型半导体
-heavy-n=重掺杂N型半导体
-p-dope=轻掺杂P型半导体
-heavy-p-type=重掺杂P型半导体
-crusher-ree=破碎稀土矿石
+fluidize-coke=焦炭流化
+tall-oil-separation=妥尔油分离
+phosphoric-acid=磷酸蒸馏
+light-n=轻度n型硅掺杂
+heavy-n=重度n型硅掺杂
+p-dope=轻度p型硅掺杂
+heavy-p-type=重度p型硅掺杂
+crusher-ree=粉碎稀土矿石
 milling-ree=研磨稀土粉末
-cumene-distilation=异丙基苯蒸馏
-rendering=海蝎宰杀与解体
-antimatter-fusion=慢反应物质
-steam-exchange5=蒸汽交换 5
-pa-aromatics=生产芳烃
-pa-benzene=生产苯
-pa-chromium=生产铬
-pa-coal=生产煤
-pa-niobium=生产铌
-pa-propene=生产丙烯
-pa-silicon=生产硅
-pa-uranium=生产铀矿
+cumene-distilation=异丙苯蒸馏
+rendering=齐皮尔提炼
+antimatter-fusion=慢反应反物质
+steam-exchange5=蒸汽交换
+pa-aromatics=培育芳香烃
+pa-benzene=培育苯
+pa-chromium=培育铬
+pa-coal=培育煤
+pa-niobium=培育铌
+pa-propene=培育丙烯
+pa-silicon=培育硅
+pa-uranium=培育铀矿石
 pa-uranium-235=浓缩铀
-pa-aluminium=生产铝
-pa-boron=生产硼
-pa-cobalt=生产钴
-pa-diamond=制作钻石
-pa-gold=生产金
-pa-helium=生产氦
-pa-hydrogen=生产氢
-pa-molybdenum=生产钼
-pa-nickel=生产镍
-pa-oxygen=生产氧
-pa-silver=生产银
-pa-vanadium=生产钒
-pa-zinc=生产锌
-random-science-pack=分类研究包
-methane-combustion=将甲烷转化成 (__1__°C)的燃烧混合物。
-benzene-combustion=将苯转化为 (__1__°C)的燃烧混合物。
-tall-oil-combustion=将焦油转化为 (__1__°C)的燃烧混合物。
-nexelit-battery-recharge=蓝坷垃电池充能
+pa-aluminium=培育铝
+pa-boron=培育硼
+pa-cobalt=培育钴
+pa-diamond=制造钻石
+pa-gold=培育金
+pa-helium=培育氦
+pa-hydrogen=培育氢
+pa-molybdenum=培育钼
+pa-nickel=培育镍
+pa-oxygen=培育氧
+pa-silver=培育银
+pa-vanadium=培育钒
+pa-zinc=培育锌
+random-science-pack=分类科学包
+methane-combustion=甲烷转化为燃烧混合物（__1__°C）
+benzene-combustion=苯转化为燃烧混合物（__1__°C）
+tall-oil-combustion=妥尔油转化为燃烧混合物（__1__°C）
+nexelit-battery-recharge=奈克塞利特电池充电
 
 [recipe-description]
 
 
 [item-group-name]
-py-hightech=Py之高新科技
+py-hightech=Py高科技
 
 [item-name]
-phosphate-rock=磷岩
-rare-earth-ore=稀土矿
+phosphate-rock=磷矿石
+rare-earth-ore=稀土矿石
 clay=黏土
 melamine=三聚氰胺
 melamine-resin=三聚氰胺树脂
 urea=尿素
 ceramic=陶瓷
-inductor1=空心电感器
-inductor2=环形电感器
-inductor3=高频贴片电感器
+inductor1=空芯电感
+inductor2=环形电感
+inductor3=高频表面贴装电感
 capacitor1=陶瓷电容器
 capacitor2=电解电容器
-capacitor3=多层贴片电容器
-resistor1=高功率电阻器
+capacitor3=多层表面贴装电容器
+resistor1=大功率电阻器
 resistor2=中功率电阻器
-resistor3=低功率电阻器
+resistor3=小功率电阻器
 graphite=石墨
 vacuum-tube=真空管
 diode=二极管
-diode3=贴片二极管
+diode3=表面贴装二极管
 transistor=晶体管
-microchip=微晶片
+microchip=微芯片
 fiberboard=纤维板
-formica=塑料装饰板
-pcb1=印刷电路基板1型
-pcb2=印刷电路基板2型
-pcb3=印刷电路基板3型
-pcb3-2=安装的电路基板
-pcb4=印刷电路基板4型
-electronic-circuit=简易电路板
+formica=福米卡装饰板
+pcb1=印刷电路板基材（1级）
+pcb2=印刷电路板基材（2级）
+pcb3=印刷电路板基材（3级）
+pcb3-2=安装式电路板基材
+pcb4=印刷电路板基材（4级）
+electronic-circuit=简单电路板
 advanced-circuit=复杂电路板
 processing-unit=高科技电路板
 powdered-phosphate-rock=磷矿粉
-light-n=轻掺杂N型半导体
-heavy-n=重掺杂N型半导体
-p-dope=轻掺杂P型半导体
-heavy-p-type=重掺杂P型半导体
-rare-earth-powder=稀土粉
+light-n=轻度n型掺杂硅
+heavy-n=重度n型掺杂硅
+p-dope=轻度p型掺杂硅
+heavy-p-type=重度p型掺杂硅
+rare-earth-powder=稀土粉末
 rare-earth-dust=稀土粉尘
 ree-concentrate=稀土精矿
 reo=稀土氧化物
 phenol=苯酚
 phenolicboard=酚醛板
-bakelite=酚醛树脂
-silicon-wafer=硅晶片
-cermet=含陶合金
-crude-cermet=粗制含陶合金
-fecr-alloy=铬铁合金
+bakelite=电木
+silicon-wafer=硅片
+cermet=金属陶瓷
+crude-cermet=粗制金属陶瓷
+fecr-alloy=铁铬合金
 silicon=硅
 glass-fiber=玻璃纤维
-bisphenol-a=双酚A
+bisphenol-a=双酚A（BPA）
 epoxy=环氧树脂
-fiberglass=玻璃纤维板
-pdms=聚二甲基硅氧烷
-nic-core=镍核心
-pdms-graphene=石墨烯基质
+fiberglass=玻璃纤维增强塑料
+pdms=聚二甲基硅氧烷（PDMS）
+nic-core=镍芯
+pdms-graphene=PDMS石墨烯基底
 graphene-sheet=石墨烯片
 graphene-roll=石墨烯卷
 processor-core=处理器核心
 processor=处理器
 phosphate-glass=磷酸盐玻璃
-high-flux-core=高磁密铁芯
-stone-wool=岩棉
-re-tin=稀土锡合金
-diode-core=二极管核心
-capacitor-core=电容器核心
-capacitor-termination=电容器终端电阻
-carbon-dust=精细碳尘
-biopolymer=生物高聚物
+high-flux-core=高通量核心
+stone-wool=矿棉
+re-tin=锡稀土合金
+diode-core=二极管芯
+capacitor-core=电容器芯
+capacitor-termination=电容器端子
+carbon-dust=精细碳粉
+biopolymer=生物聚合物
 carbon-nanotube=碳纳米管
 sodium-silicate=硅酸钠
 silica-powder=硅粉
 colloidal-silica=胶体二氧化硅
 nanochip=纳米芯片
-raw-fiber=粗纤维
+raw-fiber=原纤维
 fiber=纤维
 micro-fiber=微纤维
-sub-denier-microfiber=次旦微纤维
+sub-denier-microfiber=超细旦微纤维
 resorcinol=间苯二酚
-rf-gel=射频凝胶
-clean-rf-gel=清洁射频凝胶
+rf-gel=间苯二酚甲醛凝胶
+clean-rf-gel=透明射频凝胶
 aerogel=气凝胶
 carbon-aerogel=碳气凝胶
-kondo-substrate=近藤基板
+kondo-substrate=近藤基材
 kondo-core=近藤核心
 kondo-processor=近藤处理器
 heavy-fermion=重费米子材料
 crco-alloy=钴铬合金
-nxag-matrix=蓝坷垃银矩阵
-paradiamatic-resistor=聚合电阻器
-zinc-acetate=乙酸锌
-dry-ralesia=干若雷莎
-ralesia-powder=若雷莎粉
+nxag-matrix=奈克塞利特银基质
+paradiamatic-resistor=顺磁电阻器
+zinc-acetate=醋酸锌
+dry-ralesia=干燥拉雷西亚
+ralesia-powder=拉雷西亚粉末
 zinc-nanocompound=锌纳米化合物
 zinc-nanocomplex=锌纳米复合物
 zno-nanoparticles=氧化锌纳米颗粒
-csle-diode=截面发光二极管
+csle-diode=横截面发光二极管
 ndfeb-alloy=钕铁硼合金
 ndfeb-powder=钕铁硼粉末
-re-magnet=钕磁体
-sc-substrate=超导体基片
+re-magnet=钕磁铁
+sc-substrate=超导体基材
 superconductor=超导体
 fault-current-inductor=故障电流感应器
 nanocrystaline-core=纳米晶核心
 supercapacitor=超级电容器
-supercapacitor-core=超级电容器核心
+supercapacitor-core=超级电容器芯
 supercapacitor-shell=超级电容器外壳
 intelligent-unit=智能单元
-zipir-carcass=海蝎尸体
+zipir-carcass=齐皮尔 carcass
 bones=骨头
 skin=皮肤
 meat=肉
-py-fertilizer=py肥料
-rayon=人造纤维丝
+py-fertilizer=肥料
+rayon=人造丝
 blood-meal=血粉
 nylon=尼龙
 nylon-parts=尼龙零件
@@ -181,8 +172,8 @@ hyperelastic-material=超弹性材料
 nano-wires=纳米线
 nems=纳米机电系统
 lithium-chloride=氯化锂
-volumetric-capacitor=体积能量电容器
-yag-laser-module=半导体激光模块
+volumetric-capacitor=体积储能电容器
+yag-laser-module=YAG激光模块
 laser-module=激光模块
 lithium-niobate=铌酸锂
 parametric-oscilator=光学参量振荡器
@@ -194,65 +185,63 @@ harmonic-absorber=谐波吸收器
 pyrolytic-carbon=热解碳
 nv-center=氮空位中心
 quantum-dots=量子点
-pi-josephson-junction=π-约瑟夫森结
-var-josephson-junction=φ-约瑟夫森结
+pi-josephson-junction=π约瑟夫森结
+var-josephson-junction=Varphi约瑟夫森结
 quantum-vortex-storage-system=量子涡旋存储系统
 bose-einstein-superfluid=玻色-爱因斯坦超流体
 antimatter=反物质
-crystallographic-substrate=结晶基底
+crystallographic-substrate=晶体基材
 proton-donor=质子供体
-proton-receiver=质子接收器
-dried-meat=风干肉
+proton-receiver=质子受体
 blackhole-fuel=物质
 magic-furnace=奇点能量提取器
-ht-locomotive=高科技机车 MK1
-ht-generic-wagon=蓝坷垃悬浮货车
-nexelit-battery=蓝坷垃电池
-used-nexelit-battery=乏蓝坷垃电池
+ht-locomotive=高科技机车
+ht-generic-wagon=奈克塞利特加固货车
+nexelit-battery=奈克塞利特电池
+used-nexelit-battery=废弃奈克塞利特电池
 
 [item-description]
-clay=玩泥巴。
+clay=只是黏土而已。
 melamine=初级聚合物。
-melamine-resin=最基本的树脂。
+melamine-resin=最基础的树脂。
 ceramic=基础陶瓷。
 capacitor1=第一代电容器。
-capacitor2=强大的多功能电容器，具有美味的液体夹心！但记得别鼓包……
-capacitor3=用于复杂PCB的多层陶瓷片状电容器(MLCC)。
-resistor1=第一代电阻器，只适用于低功率的应用。
-resistor2=厚膜电阻器，适用于广泛的应用范围。
-resistor3=可承受大电流而不烧毁。
+capacitor2=优质多用途电容器，中心有美味的液体！不过别让它们鼓起来...
+capacitor3=用于复杂印刷电路板的多层陶瓷芯片电容器（MLCC）。
+resistor1=能承受高电流而不烧毁。
+resistor2=厚膜电阻器，适用于多种应用场景。
+resistor3=第三代电阻器，仅适用于小功率应用。
 inductor1=第一代电感器。
-inductor2=可爱的金属甜甜圈。但可能无法食用。
-inductor3=小型SMD封装的高性能电感器。
-vacuum-tube=具有热离子电子发射的能力。
-valve=第一代晶体管
-formica=基础压缩木材
-pcb1=第一代电路板
-circuit-board-1=第一代电路
-rare-earth-ore=比在地球上更珍贵
-rare-earth-powder=稀土生产的第一步
-rare-earth-dust=稀土生产的第二步
-bisphenol-a=远离您的身体
-epoxy=多用途树脂
-pdms=为特殊技术工作使用的凝胶
-nic-core=镍的基础芯心
-biopolymer=几种用途的先进材料.
-rf-gel=间苯二酚-甲醛凝胶
-kondo-substrate=制造强大的近藤处理器的机器
-heavy-fermion=非常规超导体
-kondo-processor=能每秒运行1PT的近藤运算
-ndfeb-alloy=钕铁硼合金
-intelligent-unit=您能证明您有自我意识吗？
-zipir-carcass=它被仁慈地赐死。
-rayon=多用途的高级纤维。
-nems=前景光明的纳米机器。
-yag-laser-module=钇铝石榴石晶体在固体激光器中的应用
-myoglobin=肌肉蛋白.
-pyrolytic-carbon=烧坏的石墨烯.
-blackhole-fuel=它没有。
-ht-locomotive=蓝坷垃动力机车
-nexelit-battery=特殊能源装置可为最现代化的运输系统提供动力。
-used-nexelit-battery=没有能量了。
+inductor2=可爱的金属甜甜圈。不过可能不能吃。
+inductor3=小型表面贴装封装的高性能电感器。
+vacuum-tube=拥有热电子发射的力量。
+formica=基础压制木材。
+pcb1=第一代印刷电路板。
+circuit-board-1=第一代电路。
+rare-earth-ore=比地球上的还要稀有。
+rare-earth-powder=稀土元素提取的第一步。
+rare-earth-dust=稀土元素提取的第二步。
+bisphenol-a=远离身体。
+epoxy=多用途树脂。
+pdms=用于纳米技术的特殊凝胶。
+nic-core=镍基核心。
+biopolymer=适用于多种用途的先进材料。
+rf-gel=间苯二酚甲醛凝胶。
+kondo-substrate=用于制造强大的近藤处理器的基材。
+heavy-fermion=非常规超导体。
+kondo-processor=每秒能进行1PT的近藤计算。
+ndfeb-alloy=钕铁硼合金。
+intelligent-unit=你能证明自己有自我意识吗？
+zipir-carcass=它是被仁慈地杀死的。
+rayon=用途广泛的高级纤维。
+nems=有着光明前景的纳米机器。
+yag-laser-module=用于固态激光器的钇铝石榴石晶体。
+myoglobin=肌肉蛋白。
+pyrolytic-carbon=劣质烧焦石墨烯。
+blackhole-fuel=它不会。
+ht-locomotive=奈克塞利特动力机车。
+nexelit-battery=专门为最现代化的运输系统供电的特殊能量单元。
+used-nexelit-battery=能量耗尽。
 
 [fluid-name]
 methane=甲烷
@@ -267,185 +256,185 @@ phosphoric-acid=磷酸
 phosphine-gas=磷化氢气体
 propene=丙烯
 ethylene=乙烯
-ree-slurry=稀土悬浮液
+ree-slurry=稀土矿浆
 ree-solution=稀土溶液
 cumene=异丙苯
 acetone=丙酮
-ech=ECH 环氧氯丙烷
+ech=环氧氯丙烷（ECH）
 chloromethane=氯甲烷
 dimethyldichlorosilane=二甲基二氯硅烷
-dms=DMS 二甲基硫醚
-msa=MSA 甲磺酸
-bacteria-2=氢氧混合细菌
-soaked-gel=浸泡凝胶
+dms=二甲基硫醚（DMS）
+msa=甲磺酸（MSA）
+bacteria-2=氢氧细菌
+soaked-gel=浸湿凝胶
 acrolein=丙烯醛
 acetic-acid=乙酸
-raw-ralesia-extract=天然若雷莎萃取液
-ralesia-extract=若雷莎萃取液
+raw-ralesia-extract=拉雷西亚粗提物
+ralesia-extract=拉雷西亚提取物
 blood=血液
-carbon-sulfide=硫化羰
-etching=蚀刻剂
+carbon-sulfide=氧硫化碳
+etching=蚀刻溶液
 nitrobenzene=硝基苯
 
 [entity-name]
-phosphate-rock=磷岩
+phosphate-rock=远古遗骸
 rare-earth-bolide=稀土陨石
-phosphate-mine=磷岩采矿机
-rare-earth-mine=稀土岩采矿机
-clay-pit-mk01=黏土坑 MK1
-clay-pit-mk02=黏土坑 MK2
-clay-pit-mk03=黏土坑 MK3
-clay-pit-mk04=黏土坑 MK4
-moondrop-greenhouse-mk01=月落草温室 MK1
-moondrop-greenhouse-mk02=月落草温室 MK2
-moondrop-greenhouse-mk03=月落草温室 MK3
-moondrop-greenhouse-mk04=月落草温室 MK4
-fbreactor-mk01=流化床反应器 MK1
-fbreactor-mk02=流化床反应器 MK2
-fbreactor-mk03=流化床反应器 MK3
-fbreactor-mk04=流化床反应器 MK4
-auog-paddock=剑背龟牧场
-electronics-factory-mk01=电子厂 MK1
-electronics-factory-mk02=电子厂 MK2
-electronics-factory-mk03=电子厂 MK3
-electronics-factory-mk04=电子厂 MK4
-pulp-mill-mk01=纸浆厂 MK1
-pulp-mill-mk02=纸浆厂 MK2
-pulp-mill-mk03=纸浆厂 MK3
-pulp-mill-mk04=纸浆厂 MK4
-pcb-factory-mk01=印制电路板厂 MK1
-pcb-factory-mk02=印制电路板厂 MK2
-pcb-factory-mk03=印制电路板厂 MK3
-pcb-factory-mk04=印制电路板厂 MK4
-chipshooter-mk01=射片机 MK1
-chipshooter-mk02=射片机 MK2
-chipshooter-mk03=射片机 MK3
-chipshooter-mk04=射片机 MK4
-nano-assembler-mk01=分子组装机 MK1
-nano-assembler-mk02=分子组装机 MK2
-nano-assembler-mk03=分子组装机 MK3
-nano-assembler-mk04=分子组装机 MK4
-cadaveric-arum-mk01=臭芋温室 MK1
-cadaveric-arum-mk02=臭芋温室 MK2
-cadaveric-arum-mk03=臭芋温室 MK3
-cadaveric-arum-mk04=臭芋温室 MK4
-kicalk-plantation=蒲公英种植园
-zipir=海蝎人工礁
-py-construction-robot-mk04=高科技建设机器人
-py-logistic-robot-mk04=高科技物流机器人
+phosphate-mine=磷矿
+rare-earth-mine=稀土提取器
+clay-pit-mk01=黏土矿MK 01
+clay-pit-mk02=黏土矿MK 02
+clay-pit-mk03=黏土矿MK 03
+clay-pit-mk04=黏土矿MK 04
+moondrop-greenhouse-mk01=月滴温室MK 01
+moondrop-greenhouse-mk02=月滴温室MK 02
+moondrop-greenhouse-mk03=月滴温室MK 03
+moondrop-greenhouse-mk04=月滴温室MK 04
+fbreactor-mk01=流化床反应器MK 01
+fbreactor-mk02=流化床反应器MK 02
+fbreactor-mk03=流化床反应器MK 03
+fbreactor-mk04=流化床反应器MK 04
+auog-paddock=奥格围场
+electronics-factory-mk01=电子工厂MK 01
+electronics-factory-mk02=电子工厂MK 02
+electronics-factory-mk03=电子工厂MK 03
+electronics-factory-mk04=电子工厂MK 04
+pulp-mill-mk01=纸浆厂MK 01
+pulp-mill-mk02=纸浆厂MK 02
+pulp-mill-mk03=纸浆厂MK 03
+pulp-mill-mk04=纸浆厂MK 04
+pcb-factory-mk01=印刷电路板工厂MK 01
+pcb-factory-mk02=印刷电路板工厂MK 02
+pcb-factory-mk03=印刷电路板工厂MK 03
+pcb-factory-mk04=印刷电路板工厂MK 04
+chipshooter-mk01=芯片贴装机MK 01
+chipshooter-mk02=芯片贴装机MK 02
+chipshooter-mk03=芯片贴装机MK 03
+chipshooter-mk04=芯片贴装机MK 04
+nano-assembler-mk01=分子组装机MK 01
+nano-assembler-mk02=分子组装机MK 02
+nano-assembler-mk03=分子组装机MK 03
+nano-assembler-mk04=分子组装机MK 04
+cadaveric-arum-mk01=尸花温室MK 01
+cadaveric-arum-mk02=尸花温室MK 02
+cadaveric-arum-mk03=尸花温室MK 03
+cadaveric-arum-mk04=尸花温室MK 04
+kicalk-plantation=基卡尔克种植园
+zipir=齐皮尔人工礁
+py-construction-robot-mk04=建筑机器人MK 04
+py-logistic-robot-mk04=物流机器人MK 04
 quantum-computer=量子计算机
-particle-accelerator-mk01=粒子加速器 MK1
-particle-accelerator-mk02=粒子加速器 MK2
-particle-accelerator-mk03=粒子加速器 MK3
-particle-accelerator-mk04=粒子加速器 MK4
-blackhole=奇点能源萃取器
+particle-accelerator-mk01=粒子加速器MK 01
+particle-accelerator-mk02=粒子加速器MK 02
+particle-accelerator-mk03=粒子加速器MK 03
+particle-accelerator-mk04=粒子加速器MK 04
+blackhole=奇点能量提取器
 magic-furnace=奇点能量提取器
-ht-pipes=通用管
-ht-pipes-to-ground=地下通用管
-ht-locomotive=高科技悬浮列车
-ht-generic-wagon=蓝坷垃悬浮货运车厢
-ht-generic-fluid-wagon=蓝坷垃悬浮液罐车厢
-crash-site-assembling-machine-1-repaired=坠毁飞船残留的组装机
-py-roboport-mk03=Py机器人指令平台 MK3								  
+ht-pipes=多用途管道
+ht-pipes-to-ground=地下多用途管道
+ht-locomotive=高科技悬浮机车
+ht-generic-wagon=奈克塞利特悬浮通用货车
+ht-generic-fluid-wagon=奈克塞利特悬浮通用流体货车
+crash-site-assembling-machine-1-repaired=坠毁飞船组装机
+py-roboport-mk03=机器人港口MK 03
+
 [entity-description]
-auog-paddock=被称为剑背龟的害羞的夜行生物。
-phosphate-rock=古代生命的遗迹。
-rare-earth-bolide=来自太空的礼物。
-phosphate-mine=从富含磷酸盐的岩石中提取磷酸盐的机器。
-rare-earth-mine=从陨石中开采稀土的机器。
-clay-pit-mk01=从地面调配和提取黏土的机器。
-clay-pit-mk02=从地面调配和提取黏土的机器。
-clay-pit-mk03=从地面调配和提取黏土的机器。
-clay-pit-mk04=从地面调配和提取黏土的机器。
-moondrop-greenhouse-mk01=种植月落草（一种生产甲烷的异星植物）的建筑。
-moondrop-greenhouse-mk02=种植月落草（一种生产甲烷的异星植物）的建筑。
-moondrop-greenhouse-mk03=种植月落草（一种生产甲烷的异星植物）的建筑。
-moondrop-greenhouse-mk04=种植月落草（一种生产甲烷的异星植物）的建筑。
+auog-paddock=被称为奥格的害羞夜行动物。
+phosphate-rock=充满远古生物骨骼遗骸的小型矿床。需要小型磷矿来提取磷矿石。
+phosphate-rock-02=远古生物的巨大保存遗骸。庆幸这些生物早已灭绝吧。需要大型磷矿来提取磷矿石。
+rare-earth-bolide=来自天空的礼物。
+phosphate-mine=从富磷岩石中提取磷的建筑。
+rare-earth-mine=从陨石中提取所有稀土资源的建筑。
+clay-pit-mk01=用于混合和从地下提取黏土的建筑。
+clay-pit-mk02=用于混合和从地下提取黏土的建筑。
+clay-pit-mk03=用于混合和从地下提取黏土的建筑。
+clay-pit-mk04=用于混合和从地下提取黏土的建筑。
+moondrop-greenhouse-mk01=种植月滴的地方，月滴是一种能产生甲烷的外星植物。
+moondrop-greenhouse-mk02=种植月滴的地方，月滴是一种能产生甲烷的外星植物。
+moondrop-greenhouse-mk03=种植月滴的地方，月滴是一种能产生甲烷的外星植物。
+moondrop-greenhouse-mk04=种植月滴的地方，月滴是一种能产生甲烷的外星植物。
 fbreactor-mk01=基础流化床反应器。
 fbreactor-mk02=基础流化床反应器。
 fbreactor-mk03=基础流化床反应器。
 fbreactor-mk04=基础流化床反应器。
-electronics-factory-mk01=制造电子元件的机器。
-electronics-factory-mk02=制造电子元件的机器。
-electronics-factory-mk03=制造电子元件的机器。
-electronics-factory-mk04=制造电子元件的机器。
-pulp-mill-mk01=有机固体的再加工。
-pulp-mill-mk02=有机固体的再加工。
-pulp-mill-mk03=有机固体的再加工。
-pulp-mill-mk04=有机固体的再加工。
-pcb-factory-mk01=自动化印制电路板组装机。
-pcb-factory-mk02=自动化印制电路板组装机。
-pcb-factory-mk03=自动化印制电路板组装机。
-pcb-factory-mk04=自动化印制电路板组装机。
+electronics-factory-mk01=制造电子元件的地方。
+electronics-factory-mk02=制造电子元件的地方。
+electronics-factory-mk03=制造电子元件的地方。
+electronics-factory-mk04=制造电子元件的地方。
+pulp-mill-mk01=进一步加工有机基固体。
+pulp-mill-mk02=进一步加工有机基固体。
+pulp-mill-mk03=进一步加工有机基固体。
+pulp-mill-mk04=进一步加工有机基固体。
+pcb-factory-mk01=自动化印刷电路板组装机。
+pcb-factory-mk02=自动化印刷电路板组装机。
+pcb-factory-mk03=自动化印刷电路板组装机。
+pcb-factory-mk04=自动化印刷电路板组装机。
 chipshooter-mk01=高速元件组装。
 chipshooter-mk02=高速元件组装。
 chipshooter-mk03=高速元件组装。
 chipshooter-mk04=高速元件组装。
-nano-assembler-mk01=制作纳米机械和组件的机器。
-nano-assembler-mk02=制作纳米机械和组件的机器。
-nano-assembler-mk03=制作纳米机械和组件的机器。
-nano-assembler-mk04=制作纳米机械和组件的机器。
-cadaveric-arum-mk01=种植能生产含硫气体的臭芋的温室。
-cadaveric-arum-mk02=种植能生产含硫气体的臭芋的温室。
-cadaveric-arum-mk03=种植能生产含硫气体的臭芋的温室。
-cadaveric-arum-mk04=种植能生产含硫气体的臭芋的温室。
-kicalk-plantation=非常有用的蓬松树木，我们能从这里获取高质量的纤维。
-py-logistic-robot-mk04=快速、高载荷、低功耗的高级物流机器人，满足您的各种需求。
-py-construction-robot-mk04=快速、高载荷、低功耗的高级建设机器人，满足您的各种需求。
-zipir=在干燥土地上养殖温顺海蝎的场所。
-quantum-computer=投资太空模拟，而非发射火箭。
-particle-accelerator-mk01=离子注入与核合成。
-particle-accelerator-mk02=离子注入与核合成。
-particle-accelerator-mk03=离子注入与核合成。
-particle-accelerator-mk04=离子注入与核合成。
-blackhole=创造一个微型黑洞来从奇点中提取旋转能量。使用[color=green]机械臂或装卸机[/color]向其输送任何物质。
-ht-locomotive=蓝坷垃动力列车。
-ht-generic-wagon=蓝坷垃加固货运车厢。
-ht-generic-fluid-wagon=蓝坷垃加固液罐车厢。
+nano-assembler-mk01=制造纳米机械和组件的地方。
+nano-assembler-mk02=制造纳米机械和组件的地方。
+nano-assembler-mk03=制造纳米机械和组件的地方。
+nano-assembler-mk04=制造纳米机械和组件的地方。
+cadaveric-arum-mk01=种植尸花的温室，尸花是一种能产生硫基气体的恶臭植物。
+cadaveric-arum-mk02=种植尸花的温室，尸花是一种能产生硫基气体的恶臭植物。
+cadaveric-arum-mk03=种植尸花的温室，尸花是一种能产生硫基气体的恶臭植物。
+cadaveric-arum-mk04=种植尸花的温室，尸花是一种能产生硫基气体的恶臭植物。
+kicalk-plantation=非常有用的毛茸茸的树，能提供高质量纤维。
+py-logistic-robot-mk04=高速、高负载、低能耗的先进物流机器人，满足你的所有需求。
+py-construction-robot-mk04=高速、高负载、低能耗的先进建筑机器人，满足你的所有需求。
+zipir=在陆地上饲养和平的齐皮尔的地方。
+quantum-computer=投资太空模拟而非发射火箭。
+particle-accelerator-mk01=离子注入和核合成。
+particle-accelerator-mk02=离子注入和核合成。
+particle-accelerator-mk03=离子注入和核合成。
+particle-accelerator-mk04=离子注入和核合成。
+blackhole=创造微型黑洞，从奇点提取旋转能量。使用 inserter 或 loader 给它喂食任何物质。
+ht-locomotive=奈克塞利特动力机车。
+ht-generic-wagon=奈克塞利特加固货车。
+ht-generic-fluid-wagon=奈克塞利特加固流体货车。
 
 [technology-name]
-electronics=真空管电子学
-basic-electronics=基础电子学
-advanced-circuit=高级电子学
-integrated-circuits-1=小型集成电路
-integrated-circuits-2=中型集成电路
-integrated-circuits-3=大型集成电路
+electronics=电子学 - 阶段1
+basic-electronics=电子学 - 阶段2
+advanced-circuit=电子学 - 阶段3
+quantum-processor=电子学 - 阶段4
+integrated-circuits-1=小规模集成电路
+integrated-circuits-2=中规模集成电路
+integrated-circuits-3=大规模集成电路
 semiconductor-doping=半导体掺杂
 rare-earth-tech=稀土技术
 graphene=石墨烯技术
-quantum-processor=纳米技术
-aerogel=气凝胶技术
+aerogel=气凝胶
 earnshaw-theorem=恩绍定理
 space-science-pack=量子计算
 penrose=彭罗斯过程
 nucleo=核合成
-ht-trains=高科技列车 MK1
-auog=剑背龟
-kicalk=蒲公英
-moondrop=月落草
+ht-trains=高科技列车MK01
+auog=奥格
+kicalk=基卡尔克
+moondrop=月滴
 biofilm=生物膜
 biopolymer=生物聚合物
 biotech=生物技术
-cadaveric-arum=臭芋
+cadaveric-arum=尸花
 carbon-nanotube=碳纳米管
-collagen=胶原
+collagen=胶原蛋白
 colloidal-silica=胶体二氧化硅
-electronics-machines=高级电子机器
+electronics-machines=先进电子设备
 epoxy=环氧树脂
 fertilizer=肥料
 fiberboard=纤维板
-fiberglass=玻璃纤维
-fluid-processing-machines=流体加工机
-ht-robotics=高科技机器人
+fiberglass=玻璃纤维增强塑料
+ht-robotics=高科技机器人技术
 magnetic-core=磁芯
 melamine=三聚氰胺
-microfibers=超细纤维
+microfibers=微纤维
 nems=纳米机电系统
-nenbit-matrix=蓝坷垃矩阵
 nitrobenzene=硝基苯
 nylon=尼龙
 paramagnetic-material=顺磁材料
-parametric-oscilator=光参量振荡器
+parametric-oscilator=光学参量振荡器
 phenol=苯酚
 phosphorous-processing=磷加工
 propene=丙烯
@@ -453,7 +442,7 @@ rayon=人造丝
 re-magnet=钕磁铁
 supercapacitor=超级电容器
 superconductor=超导体
-zipir=海蝎
+zipir=齐皮尔
 zno-nanoparticles=氧化锌纳米颗粒
 
 # new - please verify names are as desired
@@ -467,37 +456,39 @@ semiconductor-doping-mk02=半导体掺杂2
 ethylene=乙烯
 plastics-mk04=塑料4
 
-ceramic=陶瓷制品
+ceramic=陶瓷
 
 [technology-description]
-electronics=解锁非常基本的基真空管的电路。
-basic-electronics=解锁基于晶体管的基本工艺和组件。
-advanced-circuit=解锁高级晶体管工艺和组件。
+electronics=解锁非常基础的基于真空管的电路
+basic-electronics=解锁基于晶体管的基础工艺和组件。
+advanced-circuit=解锁先进的晶体管工艺和组件。
 advanced-electronics-2=解锁非常先进的晶体管工艺和组件。
-intergrated-circuits-1=早期的硅基电路，每个芯片只有几个晶体管。
-intergrated-circuits-2=具有数千个微型晶体管的更先进的电路。
-intergrated-circuits-3=高度先进的电路，拥有数百万个接近原子尺度的晶体管。
+intergrated-circuits-1=早期硅基电路，每芯片仅有几个晶体管
+intergrated-circuits-2=更先进的电路，包含数千个小型化晶体管
+intergrated-circuits-3=高度先进的电路，包含数百万个近原子级晶体管
 semiconductor-doping=通过气相沉积解锁掺杂技术。
-rare-earth-tech=提供探索稀土元素的途径。
+rare-earth-tech=允许探索稀土元素。
 graphene=解锁石墨烯技术和生产。
-quantum-processor=解锁纳米组件和技术。
+quantum-processor=解锁纳米级组件和技术。
 aerogel=解锁气凝胶技术。
-earnshaw-theorem=引力场产生的经典平方反比磁力。
+earnshaw-theorem=重力场产生的经典平方反比磁力。
 space-science-pack=解锁量子技术和量子计算机。
-nucleo=由此，您将踏入一个危险的领域。
-penrose=从旋转的黑洞中提取的终极能量。
-ht-trains=解锁效率更高的蓝坷垃动力列车。
+nucleo=进入危险领域。
+penrose=可从旋转黑洞提取的终极能量。
+ht-trains=解锁效率更高的奈克塞利特动力列车。
 
 [tile-name]
 
 [ore-name]
-phosphate-rock=磷岩
-rare-earth-ore=稀土矿
+phosphate-rock=磷矿石
+rare-earth-ore=稀土矿石
 
 [autoplace-control-names]
-phosphate-rock=[img=entity.phosphate-rock] 磷岩
-rare-earth-bolide=[img=entity.rare-earth-bolide] 稀土矿
+phosphate-rock=[img=entity.phosphate-rock] 磷矿石
+rare-earth-bolide=[img=entity.rare-earth-bolide] 稀土陨石
 
 [fuel-category-name]
-nexelit=蓝坷垃电池
-blackhole=物质粉碎者
+nexelit=奈克塞利特改进燃料
+blackhole=物质粉碎器
+
+[gui-game-finished]
