Renamed "make diamond" to "breed diamond" to match other particle accelerator recipes

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -24,7 +24,7 @@ pa-uranium-235=Uran Enreichern
 pa-aluminium=Aluminium Erbrüten
 pa-boron=Bor Erbrüten
 pa-cobalt=Kobalt Erbrüten
-pa-diamond=Diamanten Herstellen
+pa-diamond=Diamanten Erbrüten
 pa-gold=Gold Erbrüten
 pa-helium=Helium Erbrüten
 pa-hydrogen=Wasserstoff Erbrüten
