--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -25,7 +25,7 @@ pa-uranium-235=Enrich uranium
 pa-aluminium=Breed aluminium
 pa-boron=Breed boron
 pa-cobalt=Breed cobalt
-pa-diamond=Make diamond
+pa-diamond=Breed diamond
 pa-gold=Breed gold
 pa-helium=Breed helium
 pa-hydrogen=Breed hydrogen
