--- a/locale/es-ES/locale.cfg
+++ b/locale/es-ES/locale.cfg
@@ -25,7 +25,7 @@ pa-uranium-235=Enriquecer uranio
 pa-aluminium=Criar aluminio
 pa-boron=Criar boro
 pa-cobalt=Criar cobalto
-pa-diamond=Hacer diamante
+pa-diamond=Criar diamante
 pa-gold=Criar oro
 pa-helium=Criar helio
 pa-hydrogen=Criar hidrógeno
