--- a/locale/nl/locale.cfg
+++ b/locale/nl/locale.cfg
@@ -25,7 +25,7 @@ pa-uranium-235=Verrijk uranium
 pa-aluminium=Kweek aluminium
 pa-boron=Kweek boor
 pa-cobalt=Kweek kobalt
-pa-diamond=Maak diamand
+pa-diamond=Kweek diamand
 pa-gold=Kweek goud
 pa-helium=Kweek helium
 pa-hydrogen=Kweek waterstof
