--- a/locale/pl/locale.cfg
+++ b/locale/pl/locale.cfg
@@ -25,7 +25,7 @@ pa-uranium-235=Wzbogacanie uranu
 pa-aluminium=Namnażanie aluminium
 pa-boron=Namnażanie boru
 pa-cobalt=Namnażanie kobaltu
-pa-diamond=Produkcja diamentów
+pa-diamond=Namnażanie diamentów
 pa-gold=Namnażanie złota
 pa-helium=Namnażanie helu
 pa-hydrogen=Namnażanie wodoru
