--- a/locale/uk/locale.cfg
+++ b/locale/uk/locale.cfg
@@ -25,7 +25,7 @@ pa-uranium-235=Збагачення урану
 pa-aluminium=Синтез алюмінію
 pa-boron=Синтез борона
 pa-cobalt=Синтез кобальта
-pa-diamond=Синтезувати алмаз
+pa-diamond=Синтез алмаз
 pa-gold=Синтез золота
 pa-helium=Синтез гелію
 pa-hydrogen=Синтез водню
