Changed recipe names to fit in with established naming conventions and fixed slight mistranslations

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -3,40 +3,41 @@ urea-decomposition=Harnstoff-Zersetzung
 fluidize-coke=Koks-Verflüssigung
 tall-oil-separation=Tallöl-Trennung
 phosphoric-acid=Phosphorsäure-Destillation
-light-n=Silizium zu N-leicht Dopen
-heavy-n=Silizium zu N-schwer Dopen
-p-dope=Silizium zu P Dopen
-crusher-ree=Seltene Erden Zerkleinern
-milling-ree=Seltene Erden Zermahlen
+light-n=Silizium n⁻-Dotierungsprozess
+heavy-n=Silizium n⁺-Hochdotierungsprozess
+p-dope=Silizium p⁻-Dotierungsprozess
+heavy-p-type=Silizium p⁺-Hochdotierungsprozess
+crusher-ree=Seltenerdpulver
+21-ree=Seltenerdstaub
 cumene-distilation=Cumol Destillieren
-rendering=Zipir Rendern
-antimatter-fusion=Langsam Reagierende Antimaterie
+rendering=Schlachte Zipir
+antimatter-fusion=Langsame Antimateriefusion
 steam-exchange5=Dampfaustausch 5
-pa-aromatics=Aromatische Kohlenwasserstoffe Erbrüten
-pa-benzene=Benzen Erbrüten
-pa-chromium=Chrom Erbrüten
-pa-coal=Kohle Erbrüten
-pa-niobium=Niob Erbrüten
-pa-propene=Propan Erbrüten
-pa-silicon=Silizium Erbrüten
-pa-uranium=Uranerz Erbrüten
-pa-uranium-235=Uran Enreichern
-pa-aluminium=Aluminium Erbrüten
-pa-boron=Bor Erbrüten
-pa-cobalt=Kobalt Erbrüten
-pa-diamond=Diamanten Erbrüten
-pa-gold=Gold Erbrüten
-pa-helium=Helium Erbrüten
-pa-hydrogen=Wasserstoff Erbrüten
-pa-molybdenum=Molybdän Erbrüten
-pa-nickel=Nickel Erbrüten
-pa-oxygen=Sauerstoff Erbrüten
-pa-silver=Silber Erbrüten
-pa-vanadium=Vanadium Erbrüten
-pa-zinc=Zink Erbrüten
+pa-aromatics=Arenenzüchtung
+pa-benzene=Benzolzüchtung
+pa-chromium=Chromzüchtung
+pa-coal=Kohlezüchtung
+pa-niobium=Niob züchtung
+pa-propene=Propenzüchtung
+pa-silicon=Siliziumzüchtung
+pa-uranium=Uranerzzüchtung
+pa-uranium-235=Urananreicherung
+pa-aluminium=Aluminiumzüchtung
+pa-boron=Borzüchtung
+pa-cobalt=Kobaltzüchtung
+pa-diamond=Diamantzüchtung
+pa-gold=Goldzüchtung
+pa-helium=Heliumzüchtung
+pa-hydrogen=Wasserstoffzüchtung
+pa-molybdenum=Molybdänzüchtung
+pa-nickel=Nickelzüchtung
+pa-oxygen=Sauerstoffzüchtung
+pa-silver=Silberzüchtung
+pa-vanadium=Vanadiumzüchtung
+pa-zinc=Zinkzüchtung
 random-science-pack=Sortierte Wissenschaftspakete
 methane-combustion=Methan zu 550°C-heißem Brennbaren Gemisch Verarbeiten
-benzene-combustion=Benzen zu 520°C-heißem Brennbaren Gemisch Verarbeiten
+benzene-combustion=Benzol zu 520°C-heißem Brennbaren Gemisch Verarbeiten
 tall-oil-combustion=Tallöl zu 600°C-heißem Brennbaren Gemisch Verarbeiten
 
 [recipe-description]
@@ -234,11 +235,11 @@ ammonia=Ammoniak
 cyanic-acid=Cyansäure
 black-liquor=Schwarzer Likör
 tall-oil=Tallöl
-benzene=Benzen
+benzene=Benzol
 phosphorous-acid=Phosphorsäure
 phosphoric-acid=Phosphorischesäure
 phosphine-gas=Phosphangas
-propene=Propan
+propene=Propen
 ethylene=Ethen
 ree-slurry=Seltenerd-Brühe
 ree-solution=Seltenerd-Lösung
