tweaked item names (de)

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -13,7 +13,7 @@ cumene-distilation=Cumol Destillieren
 rendering=Schlachte Zipir
 antimatter-fusion=Langsame Antimateriefusion
 steam-exchange5=Dampfaustausch 5
-pa-aromatics=Arenenzüchtung
+pa-aromatics=Aromatische-Kohlenwasserstoffe-Züchtung
 pa-benzene=Benzolzüchtung
 pa-chromium=Chromzüchtung
 pa-coal=Kohlezüchtung
@@ -39,6 +39,7 @@ random-science-pack=Sortierte Wissenschaftspakete
 methane-combustion=Methan zu 550°C-heißem Brennbaren Gemisch Verarbeiten
 benzene-combustion=Benzol zu 520°C-heißem Brennbaren Gemisch Verarbeiten
 tall-oil-combustion=Tallöl zu 600°C-heißem Brennbaren Gemisch Verarbeiten
+nexelit-battery-recharge=Nexelitbatterie
 
 [recipe-description]
 
@@ -48,21 +49,21 @@ py-hightech=Py HighTech
 
 [item-name]
 phosphate-rock=Phosphatstein
-rare-earth-ore=Seltenerd-Erz
+rare-earth-ore=Seltenerderz
 clay=Lehm
 melamine=Melamin
 melamine-resin=Melaminharz
 urea=Harnstoff
 ceramic=Keramik
-inductor1=Induktor 1
-inductor2=Induktor 2
-inductor3=Induktor 3
-capacitor1=Kondensator 1
-capacitor2=Kondensator 2
-capacitor3=Kondensator 3
-resistor1=Widerstand 1
-resistor2=Widerstand 2
-resistor3=Widerstand 3
+inductor1=Luftspuleninduktor
+inductor2=Ringkerninduktor
+inductor3=Hochfrequenz-SMD-Induktor
+capacitor1=Keramikkondensator
+capacitor2=Elektrolytkondensator
+capacitor3=Mehrlagiger-SMD-Kondensator
+resistor1=Hochleistungswiderstand
+resistor2=Mittelleistungswiderstand
+resistor3=Kleinleistungswiderstand
 graphite=Graphit
 vacuum-tube=Vakuumröhre
 diode=Diode
@@ -71,36 +72,36 @@ transistor=Transistor
 microchip=Mikrochip
 fiberboard=Faserplatte
 formica=Formica
-pcb1=Gedrucktes Schaltkreissubstrat 1
-pcb2=Gedrucktes Schaltkreissubstrat 2
-pcb3=Gedrucktes Schaltkreissubstrat 3
-pcb3-2=Montiertes Schaltkreissubstrat
-pcb4=Gedrucktes Schaltkreissubstrat 4
+pcb1=Leiterplattensubstrat 1
+pcb2=Leiterplattensubstrat 2
+pcb3=Leiterplattensubstrat 3
+pcb3-2=Montiertes Leiterplattensubstrat
+pcb4=Leiterplattensubstrat 4
 electronic-circuit=Leiterplatte 1
 advanced-circuit=Leiterplatte 2
 processing-unit=Leiterplatte 3
 powdered-phosphate-rock=Phosphatsteinpulver
-light-n=Leicht-n-gedopetes Silizium
-heavy-n=Schwer-n-gedopetes Silizium
-p-dope=P-gedoptes Silizium
-heavy-p-type=Schwer-p-gedopetes Silizium
+light-n=(leicht) n⁻-dotiertes Silizium
+heavy-n=(stark) n⁺-dotiertes Silizium
+p-dope=(leicht) p⁻-dotiertes Silizium
+heavy-p-type=(stark) p⁺-dotiertes Silizium
 rare-earth-powder=Seltenerdpulver
-rare-earth-dust=Seltenerd-Staub
-ree-concentrate=Seltenerd-Konzentrat
-reo=Seltenerd-Oxide
+rare-earth-dust=Seltenerdstaub
+ree-concentrate=Seltenerdkonzentrat
+reo=Seltenerdoxid
 phenol=Phenol
-phenolicboard=Phenolische Platte
+phenolicboard=Phenolplatte
 bakelite=Bakelit
 silicon-wafer=Siliziumwafer
-cermet=Cermets
-crude-cermet=Rohe Cermets
-fecr-alloy=FeCr-Legierung
+cermet=Cermet
+crude-cermet=Rohecermet
+fecr-alloy=Eisen-Chrom-Legierung
 silicon=Silizium
 glass-fiber=Glasfaser
 bisphenol-a=Bisphenol A
 epoxy=Epoxidharz
-fiberglass=Fiberglas
-pdms=PDMS (Polydimethylsiloxane)
+fiberglass=Glasfasergewebe
+pdms=PDMS (Polydimethylsiloxan)
 nic-core=Nickelkern
 pdms-graphene=PDMS-Graphen-Basis
 graphene-sheet=Graphen-Lage
@@ -108,13 +109,13 @@ graphene-roll=Graphen-Rolle
 processor-core=Prozessorkern
 processor=Prozessor
 phosphate-glass=Phosphatglas
-high-flux-core=Hoch-Flux-Kerne
+high-flux-core=Hochfklusskern
 stone-wool=Steinwolle
 re-tin=Seltenerd-Zinn-Legierung
 diode-core=Diodenkern
 capacitor-core=Kondensatorkern
 capacitor-termination=Kondensatorterminierung
-carbon-dust=Feiner Kohlenstoffstaub
+carbon-dust=Kohlenstoffstaub
 biopolymer=Biopolymer
 carbon-nanotube=Kohlenstoffnanoröhren
 sodium-silicate=Natriumsilikat
@@ -133,20 +134,20 @@ carbon-aerogel=Kohlenstoff-Aerogel
 kondo-substrate=Kondo-Substrat
 kondo-core=Kondo-Kern
 kondo-processor=Kondo-Prozessor
-heavy-fermion=Schweres Fermionen-Material
-crco-alloy=CrCo-Legierung
+heavy-fermion=Schwerfermionen-Material
+crco-alloy=Kobalt-Chrom-Legierung
 nxag-matrix=Nexelit-Silber-Matrix
 paradiamatic-resistor=Paradigmatischer Wiederstand
 zinc-acetate=Zinkacetat
-dry-ralesia=Trockene Ralesia
+dry-ralesia=Getrocknete Ralesia
 ralesia-powder=Ralesiapulver
-zinc-nanocompound=Zink-Nanocomplex
-zinc-nanocomplex=Zink-Nanocomplex
-zno-nanoparticles=ZiO-Nanopartikel
-csle-diode=CS-LED
-ndfeb-alloy=NdFeB-Legierung
-ndfeb-powder=NdFeB-Pulver
-re-magnet=Seltenerd-Magnet
+zinc-nanocompound=Zink-Nanoverbindung
+zinc-nanocomplex=Zink-Nanokomplex
+zno-nanoparticles=Zinkoxid-Nanopartikel
+csle-diode=Querschnitt-LED
+ndfeb-alloy=Neodym-Eisen-Bor-Legierung
+ndfeb-powder=Neodym-Eisen-Bor-Pulver
+re-magnet=Neodym-Magnet
 sc-substrate=Supraleitersubstrat
 superconductor=Supraleiter
 fault-current-inductor=Spannungserhaltender Induktor
@@ -160,21 +161,21 @@ bones=Knochen
 skin=Haut
 meat=Fleisch
 py-fertilizer=Dünger
-rayon=Rayon
-blood-meal=Blutmahlzeit
+rayon=Viskosefaser
+blood-meal=Blutflocken-Futter
 nylon=Nylon
 nylon-parts=Nylon-Teile
 collagen=Kollagen
 resilin=Resilin
 hyperelastic-material=Hyperelastisches Material
 nano-wires=Nanodrähte
-nems=Nanoelektronische Systeme
+nems=Nanoelektromechanische Systeme
 lithium-chloride=Lithiumchlorid
 volumetric-capacitor=Volumetrischer Kondensator
 yag-laser-module=YAG-Lasermodul
 laser-module=Lasermodul
 lithium-niobate=Lithiumniobat
-parametric-oscilator=Optisch Parametrischer Oszillator
+parametric-oscilator=Optisch parametrischer Oszillator
 myoglobin=Myoglobin
 paramagnetic-material=Paramagnetisches Material
 diamagnetic-material=Diamagnetisches Material
@@ -182,17 +183,21 @@ superconductor-servomechanims=Supraleiter-Servomechanismus
 harmonic-absorber=Harmonischer Absorber
 pyrolytic-carbon=Pyrolytischer Kohlenstoff
 nv-center=Stickstoff-Leerstandszentrum
-quantum-dots=Quantum Dots
+quantum-dots=Quantenpunkt
 pi-josephson-junction=π-Josephson-Kreuzung
 var-josephson-junction=Varphi-Josephson-Kreuzung
 quantum-vortex-storage-system=Quantenvortex-Lagersystem
 bose-einstein-superfluid=Bose-Einstein-Superfluid
 antimatter=Antimaterie
 crystallographic-substrate=Kristallographisches Substrat
-proton-donor=Protonenspender
-proton-receiver=Protonenempfänger
+proton-donor=Protonendonor
+proton-receiver=Protonenakzeptor
 blackhole-fuel=Materie
 magic-furnace=Singularitätsenergieextraktor
+ht-locomotive=Hightech schwebende Lokomotive
+ht-generic-wagon=Hightech schwebender Güterwaggon
+nexelit-battery=Nexelitbatterie
+used-nexelit-battery=Verbrauchte Nexelitbatterie
 
 [item-description]
 clay=Einfach Lehm.
@@ -209,6 +214,7 @@ circuit-board-1=Schaltkreis der ersten Generation.
 rare-earth-ore=Noch seltener als auf der Erde.
 rare-earth-powder=Erster Schritt der Seltenerd (RE/REE-)Produktion.
 rare-earth-dust=Zweiter Schritt der RE-Produktion.
+fecr-alloy=Auch bekannt als Ferrochrom.
 bisphenol-a=Halte es von deinem Körper fern!
 epoxy=Supervielseitiges Harz.
 pdms=Spezielles Gel für Nanotechnologie.
