tweaked item descr. + fluids (de)

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -77,9 +77,9 @@ pcb2=Leiterplattensubstrat 2
 pcb3=Leiterplattensubstrat 3
 pcb3-2=Montiertes Leiterplattensubstrat
 pcb4=Leiterplattensubstrat 4
-electronic-circuit=Leiterplatte 1
-advanced-circuit=Leiterplatte 2
-processing-unit=Leiterplatte 3
+electronic-circuit=Elektronischer Schaltkreis 1
+advanced-circuit=Elektronischer Schaltkreis 2
+processing-unit=Elektronischer Schaltkreis 3
 powdered-phosphate-rock=Phosphatsteinpulver
 light-n=(leicht) n⁻-dotiertes Silizium
 heavy-n=(stark) n⁺-dotiertes Silizium
@@ -204,58 +204,67 @@ clay=Einfach Lehm.
 melamine=Primärpolymer.
 melamine-resin=Das grundlegendste Harz.
 ceramic=Keramik.
-capacitor1=Erste Generation von Kondensatoren.
+capacitor1=Die Erste Generation von Kondensatoren.
+capacitor2=Vielseitige Kondensatoren mit leckerem flüssigem Kern! Aber bloß nicht aufblähen lassen...
+capacitor3=Mehrschicht-Keramik-Chipkondensatoren für komplexe Leiterplatten. (eng. Surface-Mount-Device steht für Oberflächenmontage-Bauteil).
+resistor1=Hält hohen Strömen stand, ohne durchzubrennen.
+resistor2=Dickschichtwiderstände, einsetzbar in vielen Anwendungen.
+resistor3=Widerstände der dritten Generation, nur für Niedrigstromanwendungen geeignet.
 inductor1=Erste Generation von Induktoren.
-resistor1=Erste Generation von Widerständen.
-vacuum-tube=Erste Generation von Transistoren.
-formica=Laminat.
-pcb1=Erste Generation von PCBs.
-circuit-board-1=Schaltkreis der ersten Generation.
+inductor2=Niedliche Metall-Donuts. Eher nicht essbar.
+inductor3=Hochleistungs-Spulen in kleinem SMD-Gehäuse.
+vacuum-tube=Gesegnet mit der Kraft der thermionischen Elektronenemission.
+formica=Einfaches Pressholzlaminat.
+pcb1=Erste Generation der Leiterplattensubstrate.
+circuit-board-1=Erste Generation der elektronischen Schaltkreise.
 rare-earth-ore=Noch seltener als auf der Erde.
-rare-earth-powder=Erster Schritt der Seltenerd (RE/REE-)Produktion.
-rare-earth-dust=Zweiter Schritt der RE-Produktion.
+rare-earth-powder=Erster Schritt der Seltene-Erden-Gewinnung.
+rare-earth-dust=Zweiter Schritt der Seltene-Erden-Gewinnung.
 fecr-alloy=Auch bekannt als Ferrochrom.
-bisphenol-a=Halte es von deinem Körper fern!
+bisphenol-a=Halte es vom Körper fern!
 epoxy=Supervielseitiges Harz.
-pdms=Spezielles Gel für Nanotechnologie.
-nic-core=Nickelbasierter Kern.
-biopolymer=Fortschrittliches Material.
+pdms=Spezielles Gel für die Nanotechnologie.
+nic-core=Ein Nickelbasierter Kern.
+biopolymer=Hochleistungsmaterial für vielseitige Anwendungen
 rf-gel=Resorcinolformaldehydgel.
 kondo-substrate=Hier kann der kraftvolle Kondo-Prozessor erbaut werden.
 heavy-fermion=Unkonventioneller Supraleiter.
 kondo-processor=Kann ca. 1Pt Kondokalkulationen in der Sekunde durchführen.
-ndfeb-alloy=Eine NdFeB-Legierung.
+ndfeb-alloy=Auch bekannt als NdFeB-Legierung.
 intelligent-unit=Schaffst du den Turing-Test?
-zipir-carcass=Es wurde mit Gnade getötet.
-rayon=Fortschrittliche Fasern.
+zipir-carcass=Mit Gnade getötet.
+rayon=Fortschrittliche Fasern für vielseitige Anwendungen.
 nems=Nanomaschinen mit einer glänzenden Zukunft.
-yag-laser-module=Yttrium-Aluminium-Garnet-Kristall für Solid-State-Laser.
+yag-laser-module=Yttrium-Aluminium-Garnet-Kristall für Festkörperlaser.
 myoglobin=Muskelprotein.
 pyrolytic-carbon=Stark verbranntes Graphen.
 blackhole-fuel=Spielt keine Rolle.
+ht-locomotive=Eine durch Nexelit angetriebene Lokomotive.
+nexelit-battery=Spezielle Energieeinheit zur Versorgung modernster Transportsysteme.
+used-nexelit-battery=Keine Energie mehr. :/
 
 [fluid-name]
 methane=Methan
 methanal=Formaldehyd
 ammonia=Ammoniak
 cyanic-acid=Cyansäure
-black-liquor=Schwarzer Likör
+black-liquor=Schwarzlauge
 tall-oil=Tallöl
 benzene=Benzol
-phosphorous-acid=Phosphorsäure
-phosphoric-acid=Phosphorischesäure
-phosphine-gas=Phosphangas
+phosphorous-acid=Phosphorische Säure
+phosphoric-acid=Phosphorsäure
+phosphine-gas=Phosphingas
 propene=Propen
 ethylene=Ethen
-ree-slurry=Seltenerd-Brühe
+ree-slurry=Seltenerd-Suspension
 ree-solution=Seltenerd-Lösung
 cumene=Cumol
 acetone=Aceton
-ech=Epichlorohydrin(ECH)
+ech=Epichlorohydrin (ECH)
 chloromethane=Chlormethan
-dimethyldichlorosilane=Dichlorsilan
-dms=Dimethylsulfid(DMS)
-msa=Methansulfosäure(MSA)
+dimethyldichlorosilane=Dimethyldichlorosilan
+dms=Dimethylsulfid (DMS)
+msa=Methansulfonsäure (MSA)
 bacteria-2=Knallgas-Bakterie
 soaked-gel=Eingeweichtes-Gel
 acrolein=Acrolein
